# hackeragenda

./: .gitignore  .travis.yml  Guidelines.md  README.md  add_meetup.py  manage.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-scripts.txt  requirements.txt
.github/workflows/: lint.yaml
administration/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
administration/migrations/: 0001_initial.py
administration/templates/administration/: base.haml  dashboard.haml  event.haml  event_confirm_delete.haml  event_form.haml
agendas/: be.py  env.py  fr.py  ulb.py  vg_be.py
authentication/: urls.py  views.py
authentication/templates/registration/: login.haml  password_change_done.haml  password_change_form.haml
events/: api.py  color.py  colors.py  feeds.py  generics.py  ics.py  models.py  tests.py  urls.py  utils.py  views.py
events/fixtures/: location_cache.yaml
events/management/commands/: fetch_events.py  put_locations_to_every_events.py  tweet.py  update_location_cache_fixtures.py
events/migrations/: 0001_init.py  0001_initial.py  0002_add_agenda_field.py  0002_auto_20250708_0330.py
events/templatetags/: events_tags.py
hackeragenda/: settings.py  settings_fr.py  settings_ulb.py  settings_vg_be.py  urls.py  wsgi.py  wsgi_fr.py  wsgi_ulb.py  wsgi_vg_be.py
static/Snap.js/: .bower.json
static/jquery/: .bower.json
static/stylesheets/: app.css
templates/: base.haml  events.haml  filter_bar-be.haml  filter_bar-fr.haml  filter_bar.haml  home-be.haml  home-fr.haml  home-vg_be.haml  home.haml
templates/events/: event_archive_month.haml  event_archive_week.haml
